[metadata]
name = flake8-json
description = JSON Formatting Reporter plugin for Flake8
long_description = file:README.rst
author = Ian Stapleton Cordasco
author_email = graffatcolmingov@gmail.com
url = https://gitlab.com/pycqa/flake8-json
license = MIT
license_file = LICENSE
classifiers =
    Development Status :: 5 - Production/Stable
    Environment :: Console
    Framework :: Flake8
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Programming Language :: Python
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.4
    Programming Language :: Python :: 3.5
    Programming Language :: Python :: 3.6
    Topic :: Software Development :: Quality Assurance

[options]
include-package-data = True
packages = find:
python-requires = >=2.7,!=3.0,!=3.1,!=3.2,!=3.3
# NOTE(sigmavirus24): Uncomment this after 
# https://github.com/pypa/setuptools/issues/1136 is fixed
# package-dir =
#     = src/

[options.packages.find]
where = src/

[options.entry_points]
flake8.report =
    json = flake8_json_reporter.reporters:DefaultJSON
    codeclimate = flake8_json_reporter.reporters:CodeClimateJSON

[wheel]
universal = 1
