[metadata]
name = flake8_json
version = attr: flake8_json_reporter.__version__
description = JSON Formatting Reporter plugin for Flake8
long_description = file: README.rst
long_description_content_type = text/x-rst
url = https://github.com/pycqa/flake8-json
author = Ian Stapleton Cordasco
author_email = graffatcolmingov@gmail.com
license = MIT
license_files = LICENSE
classifiers =
    Development Status :: 5 - Production/Stable
    Environment :: Console
    Framework :: Flake8
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: Implementation :: CPython
    Topic :: Software Development :: Quality Assurance

[options]
packages = find:
python_requires = >=3.6
include_package_data = True
package_dir =
    =src

[options.packages.find]
where = src/

[options.entry_points]
flake8.report =
    json = flake8_json_reporter.reporters:DefaultJSON
    json-pretty = flake8_json_reporter.reporters:FormattedJSON
    codeclimate = flake8_json_reporter.reporters:CodeClimateJSON

[bdist_wheel]
universal = 1
